# PandaPlot

./: CONTRIBUTING.md  Damped Pendulum Simulation.pplot  EVENT_COMMAND_IMPROVEMENT_PLAN.md  README.md  github-project-management-proposal.md  pyproject.toml  test_column_position_adjustment.py  test_delete_columns.py  test_fixed_position_adjustment.py  test_grouping_logic.py  test_improved_add_columns.py  test_improved_add_rows.py
.github/: dependabot.yml
claude/: claude.md
docs/: NOTE_LIFECYCLE_ANALYSIS.md  SAMPLES.md  TASK-003_CONFIG_IMPLEMENTATION_PLAN.md  TASK-007_SIGNAL_REMOVAL_IMPLEMENTATION_PLAN.md  TASK-008_COMPONENT_SETUP_REFACTORING_PLAN.md  TASK-009_STYLING_UNIFICATION_PLAN.md  TASKS.md  TODO_TASKS.md  scenarios.yml
examples/damped pendulum/: demo_pendulum.py  pendulum_simulation.pplot
examples/damped_pendulum/: PENDULUM_README.md  create_pendulum_simulation.py  demo_pendulum.py  pendulum_simulation.pplot
examples/datasets/: sample_car_data.csv  sample_physics_data.csv
examples/sample_project/: create_sample_project.py  sample_project.pplot
pandaplot/: app.py  table.py
pandaplot/analysis/: __init__.py  analysis_engine.py  analysis_types.py
pandaplot/commands/: base_command.py  command_executor.py
pandaplot/gui/: main_window.py
pandaplot/services/: config_manager.py  config_validation.py  theme_manager.py
pandaplot/storage/: chart_data_manager.py  dataset_data_manager.py  folder_data_manager.py  item_data_manager.py  (+3 more)
tests/: test_app_context_config.py  test_config.py  test_config_manager.py  test_theme_manager.py  test_tree_visitor.py
(+158 files in other folders)
